Update version final TP03

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>St Huxley's Community College</title>
-    <link href="style.css" type="text/css" rel="stylesheet">
+    <link href="css/style.css" type="text/css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Capriola&family=Roboto+Slab:wght@300;400&display=swap" rel="stylesheet">
   </head>
   <body>
 
@@ -55,7 +56,7 @@
       <li><a href="#">Pharmaceuticals</a></li>
       <li><a href="#">Biochemistry with behaviour</a></li>
       <li><a href="#">Pure biochemistry</a></li>
-      <li><a href="#">Data mining</a></li>
+      <li><a href="#">Data mining</a></li>w
       <li><a href="#">Computer security</a></li>
       <li><a href="#">Bioinformatics</a></li>
       <li><a href="#">Cybernetics</a></li>
